
Attributes:
 * Branch attributes now show the 'branch' attribute flag in lflags(). [MG]
 
Functions:
 * setq(), regmatch(), strmatch() and sql() accept q-register names of
   more than one character. [GM]
 * unsetq() now accepts patterns of q-register names. [GM]
 * listq() lists q-registers available to r(), optionally limited to those
   matching a pattern. [GM]

Fixes:
 * isword(ansi(r,foo)) would return 0. isword now removes markup before
   checking. Ditto for isdbref, isnum, isint, isobjid. [GM]
 * round() would sometimes return a number with a decimal point but no
   digits after it, like "5.". Reported by Minion. [MG]
 * sortby() and foreach() now use call_ufun in the hardcode, fixing a number
   of minor bugs. [MG]
 * rand(-X, -Y) where -X > -Y was broken. [SW]
 * Fix a couple of minor memory leaks. [SW]
 * Possible crashbug in switch(), @switch, iter() and @dolist fixed. [MG]

Version 1.8.4 patchlevel 3                                 Mar 18,  2011

Events:
 * Event system added. Certain things can now trigger events using @config
   event_handler. See "help events" and "help event <type>". [GM]
 * dump events: dump`5min, dump`1min, dump`complete.
 * object events: object`create, object`destroy, object`move,
   object`rename, object`kill.
 * sql events: sql`connect, sql`disconnect.
 * signal events: signal`usr1, signal`usr2.
 * player events: player`create, player`fail, player`connect,
   player`disconnect, player`inactivity.
 * socket events: socket`connect, socket`disconnect
 * database events: db`dbck, db`purge, db`wcheck
 * Periodic system events like warnings checks and db consistency
   checks are now handled by a timed queue and integrated with
   softcode events. Local hackers: This involves changes to
   local.c. If you have no changes in local.c, just delete the file.
   Otherwise, see HACKING.184 for more info. [SW]

Commands:
 * @hook/override/inplace - You can now run softcode with the same priority
   as hardcode! [GM]